# RAGv2-Agentic-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
agent/: __init__.py  graph.py  mcp_tools.py  nodes.py  prompts.py  sessions.py  state.py  tools.py  tracer.py
core/: __init__.py  config.py  formatting.py  llm_client.py  types.py
data/: agent.sqlite  agent.sqlite-shm  agent.sqlite-wal
docs/: CI-CD-процесс.md
eval/: __init__.py  compare_splitters.py  eval_ragas.py  golden_set.yaml  golden_set_bm25.yaml  judge.py  metrics.py  report.py  runner.py  runner_agent.py
interfaces/: README.md  __init__.py  cli.py
mcp_obsidian/: fs_client.py  server.py
notebooks/: debug.ipynb  trace_20260416_113040.json  trace_20260416_160537.json  trace_20260416_161814.json  trace_20260420_122119.json
reports/: baseline_2026-04-17_M10_F10_D0.75_S0.0_baseline.md  compare_splitters_2026-04-16.md  ragas_report_2026-04-16.md  ragas_report_2026-04-17_M15_F15_D0.75_S0.0.md  ragas_report_2026-04-17_M5_F5_D0.75_S0.0.md  ragas_report_2026-04-18_M10_F10_D0.75_S0.0_large(1 прогон).md  ragas_report_2026-04-18_M10_F10_D0.75_S0.0_mhts_only(1 прогон).md  ragas_report_2026-04-18_M10_F10_D0.8_S0.0_rcts_only.md  ragas_report_2026-04-18_M20_F20_D0.8_S0.0_large.md  ragas_report_2026-04-19_M10_F10_D0.75_S0.0_large(2 прогон).md  ragas_report_2026-04-19_M10_F10_D0.75_S0.0_mhts_only(2 прогон).md  ragas_report_2026-04-20_M15_F15_D0.79_S0.0_large!!!!!.md  (+11 more)
retriever/: TEST_BM25_README.md  (+7 more)
(+68 files in other folders)
