[project]
name = "rag-v2"
version = "0.1.0"
description = "Agentic RAG assistant for Obsidian knowledge base"
requires-python = ">=3.11"

dependencies = [
    # LLM
    "openai>=1.52.0",
    "httpx>=0.27.0",
    # LangChain / LangGraph
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    # Qdrant
    "qdrant-client>=1.13.0",
    "langchain-qdrant>=0.2.0",
    # Embeddings
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.5.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.2.0", "datasets>=2.0.0"]
web = ["fastapi>=0.100.0", "uvicorn[standard]>=0.24.0", "jinja2>=3.1.0"]
telegram = ["python-telegram-bot>=21.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["setuptools>=73.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "agent*", "retriever*", "eval*", "interfaces*", "scripts*"]

[tool.ruff]
line-length = 100
